objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Accenture_Emp_Number__c</fullName>
        <label>Accenture Emp Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certification__c</fullName>
        <label>Certification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Administrator</fullName>
                </value>
                <value>
                    <fullName>Salesforce Advanced Administrator</fullName>
                </value>
                <value>
                    <fullName>Salesforce Platform App Builder</fullName>
                </value>
                <value>
                    <fullName>Salesforce Domain Specialist</fullName>
                </value>
                <value>
                    <fullName>Salesforce Domain Architect</fullName>
                </value>
                <value>
                    <fullName>Salesforce Technical Architect</fullName>
                </value>
                <value>
                    <fullName>Salesforce Developer</fullName>
                </value>
                <value>
                    <fullName>Salesforce Platform Developer I</fullName>
                </value>
                <value>
                    <fullName>Salesforce Platform Developer II</fullName>
                </value>
                <value>
                    <fullName>Salesforce Sales Cloud Consultant</fullName>
                </value>
                <value>
                    <fullName>Salesforce Service Cloud Consultant</fullName>
                </value>
                <value>
                    <fullName>Salesforce Marketing Cloud Consultant</fullName>
                </value>
                <value>
                    <fullName>Salesforce Pardot Consultant</fullName>
                </value>
                <value>
                    <fullName>Salesforce Pardot Specialist</fullName>
                </value>
                <value>
                    <fullName>Salesforce Marketing Cloud Email Specialist</fullName>
                </value>
                <value>
                    <fullName>Salesforce Marketing Cloud Social Specialist</fullName>
                </value>
                <value>
                    <fullName>Veeva Administrator</fullName>
                </value>
                <value>
                    <fullName>Veeva Vault Administrator</fullName>
                </value>
                <value>
                    <fullName>Veeva Network Administrator</fullName>
                </value>
                <value>
                    <fullName>Veeva Events Management Administrator</fullName>
                </value>
                <value>
                    <fullName>ModelN</fullName>
                </value>
                <value>
                    <fullName>MuleSoft</fullName>
                </value>
                <value>
                    <fullName>SteelBrick</fullName>
                </value>
                <value>
                    <fullName>Conga</fullName>
                </value>
                <value>
                    <fullName>DocuSign</fullName>
                </value>
                <value>
                    <fullName>EchoSign</fullName>
                </value>
                <value>
                    <fullName>SaaS Methodology Practitioner</fullName>
                </value>
                <value>
                    <fullName>Intelligent Patient Platform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_TL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manager ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>Presales</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roll_Off_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Roll Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roll_On_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Roll On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Skill_Set__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Skill Set</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Team_Lead_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Lead Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Employee__c.Team_Lead__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Employee__c.Manager_TL__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employees (Team Lead Name)</relationshipLabel>
        <relationshipName>Employees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Team Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Employee__c.Manager_TL__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Employee</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>